--- a/teste.html
+++ b/teste.html
@@ -49,5 +49,97 @@
 			</ul>
 		</li>
 	</ul>
+
+	<img src="https://i.redd.it/diesa1cw6ie11.png" width="500">
+
+	<h2>Rusty Steele</h2>
+	<P>Hi, i'm a dog. woof!</P>
+
+	<H3>Some of my favorite places:</H3>
+
+	<ul>
+		<li>the beach</li>
+		<li>The dog park</li>
+		<li>the fire hydrant</li>
+	</ul>
+
+	<p>make sure to follow me on <a href="https:\\instagram.com">Instagram</a></p>
+
+
+
+
+	<table border="1">
+
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Age</th>
+			</tr>
+		</thead>
+
+
+		<tbody>
+			<tr>
+				<td>Green</td>
+				<td>12</td>
+			</tr>
+			<tr>
+				<td>Doug</td>
+				<td>36</td>
+			</tr>
+		</tbody>
+
+	</table>
+
+
+
+
+
+
+
+
+
+
+	<h1>First gen pokemon chart</h1>
+
+
+	<table border="1">
+		<thead>
+			<tr>
+				<td><b>Image</b></td>
+				<td><b>Name</b></td>
+				<td><b>Type</b></td>
+				<td><b>Evolves into</b></td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><img src="http://img4.wikia.nocookie.net/__cb20140328190757/pokemon/images/thumb/2/21/001Bulbasaur.png/200px-001Bulbasaur.png"></td>
+				<td>Bulbasaur</td>
+				<td>Grass/Poison</td>
+				<td><a href="http://pokemon.wikia.com/wiki/Ivysaur">Ivysaur</a></td>
+			</tr>
+
+			<tr>
+				<td><img src="http://img4.wikia.nocookie.net/__cb20140724195345/pokemon/images/thumb/7/73/004Charmander.png/200px-004Charmander.png"></td>
+				<td>Charmander</td>
+				<td>Fire</td>
+				<td><a href="http://pokemon.wikia.com/wiki/Charmeleon ">Charmeleon</a></td>
+			</tr>
+
+			<tr>
+				<td><img src="http://img1.wikia.nocookie.net/__cb20140328191525/pokemon/images/thumb/3/39/007Squirtle.png/200px-007Squirtle.png"></td>
+				<td>Squirtle</td>
+				<td>Water</td>
+				<td><a href="http://pokemon.wikia.com/wiki/Wartortle">Wartortle</a></td>
+			</tr>
+
+
+		</tbody>
+	</table>
+
+
+
+
 </body>
 </html>
