--- a/index.html
+++ b/index.html
@@ -133,10 +133,42 @@
 				<td>Water</td>
 				<td><a href="http://pokemon.wikia.com/wiki/Wartortle">Wartortle</a></td>
 			</tr>
-
-
 		</tbody>
 	</table>
+
+	<br><br><br><br>
+
+	<form action="https:\\google.com.br" method="" >
+		
+		<label>
+			Username:
+			<input type="text"  name="nome" placeholder="nome">
+		</label>
+
+		<label>
+			Password:
+			<input type="password" name="password" placeholder="senha">
+		</label>
+
+		<input type="radio" name="radio" >
+
+		<button>Enviar</button>
+
+	</form>
+
+	<br><br><br><br><br><br><br><br><br>
+
+	<form action="https:\\google.com.br" method="" >
+		
+		<label for="username">Email:</label>
+		<input type="email" id="username"  name="nome" placeholder="nome" required>
+
+		<label for="password">Password:</label>
+		<input type="password" id="password" name="password" placeholder="senha" required>
+
+		<button>Enviar</button>
+
+	</form>
 
 
 
