--- a/inputs.html
+++ b/inputs.html
@@ -8,9 +8,11 @@
 	<P> do u prefer cats or dogs ?</P>
 
 	<form>
-		<label for="dogs">Dogs</label>
+		<label for="dogs">Dogs: </label>
 		<input id="dogs" type="radio">
-				<label for="cats">Cats</label>
+
+
+		<label for="cats">Cats</label>
 		<input id="cats" type="radio">
 	</form>
 
