--- a/exercise.html
+++ b/exercise.html
@@ -10,10 +10,10 @@
 	<form>
 
 		<label for="fname">First Name: </label>
-		<input type="text" id="fname" name="name" placeholder="John">
+		<input type="text" id="fname" name="name" placeholder="John" required>
 
 		<label for="lname">Last Name: </label>
-		<input type="text" id="lname" name="lastname" placeholder="Smith">
+		<input type="text" id="lname" name="lastname" placeholder="Smith" required>
 
 		<Br>
 
@@ -29,10 +29,10 @@
 		<br>
 
 		<label for="email">Email</label>
-		<input type="email" id="email" name="email" placeholder="your email">
+		<input type="email" id="email" name="email" placeholder="your email" required>
 
 		<label for="pss">Password</label>
-		<input type="password" id="pss" name="password" placeholder="your password">
+		<input type="password" id="pss" name="password" placeholder="your password" required minlength="5" maxlength="10">
 
 		<br>
 
