--- a/exercise.html
+++ b/exercise.html
@@ -37,16 +37,28 @@
 		<br>
 
 		<label for="birth">Birthday</label>
-		<select>
-			<option value="month">Month</option>
+		<select name="mes">
+			<option value="month" selected disabled>Month</option>
+			<option value="jan">Janeiro</option>
+			<option value="fev">Fevereiro</option>
+			<option value="abril">Abril</option>
+			<option value="maio">Maio</option>
 		</select>
 
-		<select>
-			<option value="day">Day</option>
+		<select name="dia">
+			<option value="day" selected disabled>Day</option>
+			<option value="um">1</option>
+			<option value="dois">2</option>
+			<option value="tres">3</option>
+			<option value="quatro">4</option>
 		</select>
 
-		<select>
-			<option value="year">Year</option>
+		<select name="ano">
+			<option value="year" selected disabled>Year</option>
+			<option value="2018">2018</option>
+			<option value="2019">2019</option>
+			<option value="2020">2020</option>
+			<option value="2021">2021</option>
 		</select>
 
 		<Br>
