--- a/todoList.html
+++ b/todoList.html
@@ -7,17 +7,17 @@
 <body>
 
 	<ul>
-		<li>
+		<li class="completed">
 			<input type="checkbox">
 			Walk Rusty
 		</li>
 
-		<li>
+		<li class="completed">
 			<input type="checkbox">
 			Buy Groceries
 		</li>
 
-		<li>
+		<li id="special" class="completed">
 			<input type="checkbox">
 			Finish recording css videos
 		</li>
