a new knowledge of css

--- a/todoList.html
+++ b/todoList.html
@@ -23,5 +23,64 @@
 		</li>
 	</ul>
 
+	<h4>Test plus on css selector</h4>
+	<ul>
+		<li >
+			<input type="checkbox">
+			Walk Rusty
+		</li>
+
+		<li >
+			<a href="https://google.com.br">Google</a>
+		</li>
+
+		<li >
+			<input type="checkbox">
+			Finish recording css videos
+		</li>
+	</ul>
+
+	<h4>test plus too</h4>
+
+	<ul>
+		<li >
+			<input type="checkbox">
+			Walk Rusty
+		</li>
+
+		<li >
+			<input type="checkbox">
+			Buy Groceries
+		</li>
+
+		<li >
+			<input type="checkbox">
+			Finish recording css videos
+		</li>
+	</ul>
+
+	<ul>
+		<li >
+			<input type="checkbox">
+			<a href="https://google.com.br">Google</a>
+		</li>
+
+		<li >
+			<input type="checkbox">
+			Buy Groceries
+		</li>
+
+		<li >
+			<input type="checkbox">
+			Finish recording css videos
+		</li>
+	</ul>
+
+	<!-- this is new -->
+	<!-- check the css file -->
+	<a href="https://google.com.br">Google</a>
+
+
+
 </body>
 </html>
