--- a/inputs.html
+++ b/inputs.html
@@ -21,6 +21,7 @@
 			<option value="sad">:(</option>
 			<option value="neutral">:|</option>
 			<option value="happy">:)</option>
+			<option value="neutral">:|</option>
 		</select>
 
 		<button>Enviar</button>
