--- a/tictac.html
+++ b/tictac.html
@@ -13,7 +13,26 @@
 
     <h1>Tic Tac Toe</h1>
 
-    
-    
+    <table>
+        <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+
+
 </body>
 </html>
