--- a/tictac.html
+++ b/tictac.html
@@ -16,19 +16,19 @@
     <table>
         <tbody>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="role1"></td>
+                <td id="role2"></td>
+                <td id="role3"></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="role4"></td>
+                <td id="role5"></td>
+                <td id="role6"></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="role7"></td>
+                <td id="role8"></td>
+                <td id="role9"></td>
             </tr>
         </tbody>
     </table>
