--- a/photoGrid.html
+++ b/photoGrid.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>photoGrid</title>
     <link rel="stylesheet" href="css/photoGrid.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
 </head>
 <body>
     
-    <h1>Diego Magalhães</h1>
-
+    <p>Diego Magalhães</p>
     <!-- Massimo Margagnoni -->
     <img src="https://image-ticketfly.imgix.net/00/03/02/47/50-og.jpeg?">
     <img src="https://studiosol-a.akamaihd.net/uploadfile/letras/fotos/6/7/1/2/67122634c77dc063cb30114610a6094c.jpg">
