--- a/Section8Bootstrap/grid.html
+++ b/Section8Bootstrap/grid.html
@@ -19,7 +19,6 @@
 </head>
 <body>
     
-    
     <div class="container">
         <div class="row">
             <div class="col-lg-6 pink">COL LG 6</div>
@@ -38,6 +37,7 @@
             <div class="col-lg-1 pink">COL LG 1</div>
             <div class="col-lg-1 pink">COL LG 1</div>
 
+            <div class="col-lg-4 pink">COL LG 1</div>
             <div class="col-lg-4 pink">COL LG 1</div>
             <div class="col-lg-4 pink">COL LG 1</div>
             <div class="col-lg-4 pink">COL LG 1</div>
