--- a/Section8Bootstrap/grid.html
+++ b/Section8Bootstrap/grid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Grid System</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -12,35 +12,34 @@
             border: 3px solid green;
             background-color: rgb(225, 192, 255);
         }
-        .orange{
-
-        }
     </style>
 </head>
 <body>
     
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 pink">COL LG 6</div>
-            <div class="col-lg-6 pink">CO LG 6</div>
+<!--             <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div> -->
 
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-            <div class="col-lg-1 pink">COL LG 1</div>
-
-            <div class="col-lg-4 pink">COL LG 1</div>
-            <div class="col-lg-4 pink">COL LG 1</div>
-            <div class="col-lg-4 pink">COL LG 1</div>
-            <div class="col-lg-4 pink">COL LG 1</div>
+            <div class="col-md-3 col-sm-6 pink">
+                <div class="row">
+                    <div class="col-md-6 red">aa</div>
+                    <div class="col-md-6 green">b</div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 pink">2</div>
+            <div class="col-md-3 col-sm-6 pink">3</div>
+            <div class="col-md-3 col-sm-6 pink">4</div>
         </div>
     </div>
 
